Refactor: 불변의 7개 이하의 원소를 가진 리스트를 반환하므로 List.of로 변경
- 참고 url: https://kim-jong-hyun.tistory.com/31